--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel art</title>
+    <title>"Paleta de Cores"</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1 id="title">Paleta de Cores</h1>
 
+    <div class="container" id="color-palette"></div>
+
+    <span class="texto">Quantidade de Pixels <span id="valor"></span></span>
+
+    <div class="board-size">
+        <input id="board-size" class="slider" type="range" min="5" max="50" value="5">
+        <button class="vqv" id="generate-board">VQV</button>
+    </div>
+
+    <button class="limpar" id="clear-board">Limpar</button>
+
+    <div id="pixel-board"></div>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
