concluido do 1 ao 9

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id="title">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1> -->
 
     <div class="container" id="color-palette"></div>
 
