--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel art</title>
+    <title>Paleta de Cores</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+     <h1 id="title">Paleta de Cores</h1>
 
-    <script src="./script.js"></script>
+     
+
+
+
+   <script src="./script.js"></script> 
 </body>
-
 </html>
