Paleta de Cores 2° Requisito Concluido

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
      <h1 id="title">Paleta de Cores</h1>
 
-     
-
-
+     <div class="container" id="color-palette"></div>
 
    <script src="./script.js"></script> 
 </body>
 </html>
+
+<!-- "Paleta de Cores ° Requisito Concluido" -->
