Paleta de Cores 4° e 5° Requisito Concluido

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
      <div class="container" id="color-palette"></div>
 
+     <div id="pixel-board"></div>
+
    <script src="./script.js"></script> 
 </body>
 </html>
