Paleta de Cores 9° Requisito Concluido

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
      <h1 id="title">Paleta de Cores</h1>
 
      <div class="container" id="color-palette"></div>
+     
+     <button class="limpar" id="clear-board">Limpar</button>
 
      <div id="pixel-board"></div>
+
 
    <script src="./script.js"></script> 
 </body>
