--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +10,17 @@
 </head>
 
 <body>
-     <h1 id="title">Paleta de Cores</h1>
 
-     <div class="container" id="color-palette"></div>
-     
-     <button class="limpar" id="clear-board">Limpar</button>
+    <h1 id="title">Paleta de Cores</h1>
 
-     <div id="pixel-board"></div>
+    <div class="container" id="color-palette"></div>
 
+    <button class="limpar" id="clear-board">Limpar</button>
 
-   <script src="./script.js"></script> 
+    <div id="pixel-board"></div>
+
+    <script src="./script.js"></script>
+
 </body>
-</html>
 
-<!-- "Paleta de Cores ° Requisito Concluido" -->
+</html>
