--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container" id="color-palette"></div>
 
-    <button class="limpar" id="clear-board">Limpar</button>
+    <button class="clear" id="clear-board">Limpar</button>
 
     <div id="pixel-board"></div>
 
